--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 <a href="documents/Documents.html"><button type="button" class="btn btn-success btn-circle btn-xl">Documents</button></a>
 <a href="portal/portal.html"><button type="button" class="btn btn-info btn-circle btn-xl">Portal</button></a>
 <a href="reports/reports.html"><button type="button" class="btn btn-warning btn-circle btn-xl">Reports</button></a>
-<a href="Settings/settings.html"><button type="button" class="btn btn-danger btn-circle btn-xl">Settings</button></a>
+<a href="settings/settings.html"><button type="button" class="btn btn-danger btn-circle btn-xl">Settings</button></a>
 
 
 
 <footer id="footer">
      <div>
-    
+
        <p>© Copyright 2019 AC Finance</p>
 
      </div>
